# ChangeLog for app-editors/vim-core
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/vim-core/ChangeLog,v 1.369 2011/06/22 21:27:26 ranger Exp $

  22 Jun 2011; Brent Baude <ranger@gentoo.org> vim-core-7.3.189.ebuild:
  Marking vim-core-7.3.189 ppc for bug 371977

  20 Jun 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> vim-core-7.3.189.ebuild:
  x86 stable wrt bug #371977

  19 Jun 2011; Markus Meier <maekke@gentoo.org> vim-core-7.3.189.ebuild:
  arm stable, bug #371977

  18 Jun 2011; Markos Chandras <hwoarang@gentoo.org> vim-core-7.3.189.ebuild:
  Stable on amd64 wrt bug #371977

  17 Jun 2011; Jeroen Roovers <jer@gentoo.org> vim-core-7.3.189.ebuild:
  Stable for HPPA (bug #371977).

  17 Jun 2011; Jim Ramsay <lack@gentoo.org> -vim-core-7.3.50.ebuild,
  -vim-core-7.3.75.ebuild, -vim-core-7.3.102.ebuild, -vim-core-7.3.162.ebuild:
  Version cleanup: Removing unused versions

*vim-core-7.3.219 (16 Jun 2011)

  16 Jun 2011; Jim Ramsay <lack@gentoo.org> +vim-core-7.3.219.ebuild:
  Version bump: 7.3.219 is released

  22 May 2011; Joseph Jezak <josejx@gentoo.org> vim-core-7.3.135.ebuild:
  Marked ppc/ppc64 stable for bug #364807.

*vim-core-7.3.189 (12 May 2011)

  12 May 2011; Jim Ramsay <lack@gentoo.org> +vim-core-7.3.189.ebuild:
  Version bump: 7.3.189 is released

  07 May 2011; Raúl Porcel <armin76@gentoo.org> vim-core-7.3.135.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #364807

  07 May 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> vim-core-7.3.135.ebuild:
  x86 stable wrt bug #364807

  03 May 2011; Markos Chandras <hwoarang@gentoo.org> vim-core-7.3.135.ebuild:
  Stable on amd64 wrt bug #364807

  02 May 2011; Jeroen Roovers <jer@gentoo.org> vim-core-7.3.135.ebuild:
  Stable for HPPA (bug #364807).

*vim-core-7.3.162 (25 Apr 2011)

  25 Apr 2011; Jim Ramsay <lack@gentoo.org> +vim-core-7.3.162.ebuild:
  Version bump: 7.3.162 is released
