@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX gvim-7.1-interix-link.patch 716 RMD160 8e556d87edec46a3af0a12646c60bc4381d14eb4 SHA1 b8ee0e3612e728d728352a5133446d25359adc22 SHA256 53459943e62247469f6fbaa30abd36d7629e02bd26bebe3e8947d45b23408bc9
 AUX gvim-7.1.285-darwin-x11link.patch 388 RMD160 80b51aae697c19ab39b7f5ac02220b08d8cfb545 SHA1 851a15de65eefd384a024699f1c44de001f109fc SHA256 0b935efbedabeab8439d42baa1d07b2f3d5e2964dea9e504ff2a4d4b9f3e6bcd
 AUX gvim-7.1.319-interix-cflags.patch 919 RMD160 4cd80e48816a37c3b3883a721aff21946ccca017 SHA1 5c49720e25e0b2a847f108b6f836833a61438347 SHA256 4823169ed87498ed4856e8c18e5ca4dd7d5cc9f8d899b2091b3c757579290a21
@@ -17,7 +20,14 @@ DIST vim-patches-7.3.189.tar.bz2 186783 RMD160 223c5b7cdd516097f3964e0bfad49518c
 DIST vim-patches-7.3.219.tar.bz2 214978 RMD160 12a059ee8b382d7f53e8a3f12c154c1250df6065 SHA1 7658f6e199f97b014c33c5ca65841843481d8ebb SHA256 17defc86c7fc23fed8f6400c7b93f9d4a352b0477ea7ed7fb55083cc0f10c129
 EBUILD gvim-7.2.442.ebuild 1062 RMD160 568419542eab93c476f91cfb888a63bed096a277 SHA1 e6c09362c74161b38ce2485ef28dcc93b08e1c5d SHA256 c0ee4588aa257bc3ab7902eee7848cd64a463b97a2e97be04af612b6ca92ddee
 EBUILD gvim-7.3.135.ebuild 952 RMD160 43dbc98be3ff1ee40d2ba8b23eb1528b12eb3977 SHA1 72e3dbd3007522be9597df7f1b34c9762e6b54ae SHA256 b76bca3703f932887122ba36502123dee6c44fc17f6dd76eb558d510e4f2f7f2
-EBUILD gvim-7.3.189.ebuild 956 RMD160 8579755d4f2ece270bdb6cf2af50a5950605636f SHA1 a1ed5c6f476bbfe53d0c30d335d2c7fc7c038e68 SHA256 cf1649ad0b486bc2167f07b3ba01c11a954ad251d023600c4c13eb8947ddf99f
+EBUILD gvim-7.3.189.ebuild 954 RMD160 6137147c85eb31b8b993fe2ea03d1246bd9fab46 SHA1 aca9e7e4980ce5ce1c9d3cae3c3195237e3b970e SHA256 cd8ebad4857be4a70cf4ff396434b32a259757c5349622995cd8eea6c232c57e
 EBUILD gvim-7.3.219.ebuild 959 RMD160 0d4bdfd91a0f1f9dc5da31b5f7abddbe40a56f50 SHA1 5dcc6bb68aa06a65727e382c18d082591721e4d2 SHA256 dafef4b384d80128772274ee37924b3e3122b3b801309f2484fbee8d07a85e84
-MISC ChangeLog 47644 RMD160 743307cfc2e28ea19e8c2f94acc79d777388cf5c SHA1 641dcb4951c25885da256d610d11280c785887c7 SHA256 75f3c66c9698ab7f964771871174905452927c66e34a0abb4111cdf18d6aa2ab
+MISC ChangeLog 47754 RMD160 baa6f7524d6e8a460355251b575cb692e2205dd7 SHA1 1ef9c5bd22dac917e4c2e00cedce471592f7fdd9 SHA256 1bb95ab19912fd520d742033f59f64373a90d5bf59d742ba802ed797f9fea2bf
 MISC metadata.xml 256 RMD160 a0c7fc929bd36ed03b8fcfbb839c298bcfb983ac SHA1 50a37a291ecfdb7339d010243a9a762a9972876e SHA256 f4c244e16d3addc264e2dd76e6fbf341a933584e86e2e325488580e5cfd88d22
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iEYEARECAAYFAk4ErugACgkQuQc30/atMkCOgQCgl+5Ipiw1MdARdFIxIpRVqxX6
+RgwAn1hrijPvuXjuScBEnXdkjxNvJuTI
+=tAZY
+-----END PGP SIGNATURE-----
