@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/vim
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/vim/ChangeLog,v 1.383 2011/06/22 21:29:02 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/vim/ChangeLog,v 1.384 2011/06/24 15:33:28 armin76 Exp $
+
+  24 Jun 2011; Raúl Porcel <armin76@gentoo.org> vim-7.3.189.ebuild:
+  alpha/ia64/m68k/s390/sh/sparc stable wrt #371977
 
   22 Jun 2011; Brent Baude <ranger@gentoo.org> vim-7.3.189.ebuild:
   Marking vim-7.3.189 ppc for bug 371977
