@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/vim-core
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/vim-core/ChangeLog,v 1.369 2011/06/22 21:27:26 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/vim-core/ChangeLog,v 1.370 2011/06/24 15:28:40 armin76 Exp $
+
+  24 Jun 2011; Raúl Porcel <armin76@gentoo.org> vim-core-7.3.189.ebuild:
+  alpha/ia64/m68k/s390/sh/sparc stable wrt #371977
 
   22 Jun 2011; Brent Baude <ranger@gentoo.org> vim-core-7.3.189.ebuild:
   Marking vim-core-7.3.189 ppc for bug 371977
